# simple-futures-backtester

./: .gitignore  CLAUDE.md  CLI_TESTS_VERIFICATION.md  I1_COVERAGE_REPORT.md  I1_COVERAGE_SUMMARY.txt  I1_T1_COMPLETION_SUMMARY.txt  I1_T1_VERIFICATION_REPORT.md  I1_T6_ACCEPTANCE_VERIFICATION.md  I1_T6_COMPLETION_REPORT.md  I1_T6_FINAL_COVERAGE_REPORT.md  I1_T6_FINAL_REPORT.md  I1_T6_SUMMARY.md  I1_T6_VERIFICATION_REPORT.md  I1_T6_VERIFICATION_SUMMARY.md  I2_T2_COMPLETION_REPORT.md  I4.T3_VERIFICATION_REPORT.md  I4.T4_COMPLETION_REPORT.md  README.md  VERIFICATION_I1.T1.md  VERIFICATION_I5_T2.md  VERIFICATION_REPORT_I2T1.md  VERIFICATION_REPORT_I4T3.md  claude_verify_i1t4_completion.py  claude_verify_i2t1.py  claude_verify_i4t3.py  claude_verify_i4t4.py  claude_verify_i4t4_standalone.py  claude_verify_reports.py  claude_verify_reports_standalone.py  coverage.json  i1_test_verification.txt  pyproject.toml  setup.py  test_results_I1.txt  test_results_I1_new.txt  test_results_I1_verification.txt
.codemachine/artifacts/: I1.T2_verification_report.txt  I5_T7_completion_summary.md  verification_report_I5_T7.md
.codemachine/artifacts/tasks/: I1_T1_VERIFICATION_REPORT.md  I1_T4_VERIFICATION_REPORT.md  I2_T2_COMPLETION_SUMMARY.md  I2_T2_VERIFICATION_REPORT.md  tasks_I1.json  tasks_I2.json  tasks_I5.json
.codemachine/artifacts/verification_reports/: I1.T1_verification_report.md  I1_T6_Coverage_Report.md  I1_T6_FINAL_VERIFICATION.md
.codemachine/prompts/: context.md
configs/strategies/: .gitkeep  breakout.yaml  mean_reversion.yaml  momentum.yaml
configs/sweeps/: .gitkeep  breakout_sweep.yaml  momentum_sweep.yaml
docs/api/: reference.md
docs/diagrams/: .gitkeep  component_diagram.puml  data_flow.puml  erd.md
docs/examples/: .gitkeep
docs/guides/: bar_types.md  quickstart.md  strategies.md
examples/: basic_backtest.py  custom_strategy.py  parameter_sweep.py  renko_strategy.py
scripts/: install_fork.sh  run_benchmarks.sh
simple_futures_backtester/: __init__.py  cli.py  config.py
simple_futures_backtester/backtest/: __init__.py  engine.py  sweep.py
simple_futures_backtester/bars/: __init__.py  dollar_bars.py  imbalance_bars.py  range_bars.py  renko.py  tick_bars.py  volume_bars.py
simple_futures_backtester/extensions/: __init__.py  futures_portfolio.py  trailing_stops.py
simple_futures_backtester/indicators/: __init__.py  vectorized.py
simple_futures_backtester/strategy/: __init__.py  base.py
simple_futures_backtester/strategy/examples/: __init__.py  big_trend_scalper.py  big_trend_scalper_v10.py  big_trend_scalper_v2.py  big_trend_scalper_v3.py  big_trend_scalper_v4.py  big_trend_scalper_v5.py  big_trend_scalper_v6.py  big_trend_scalper_v8.py  big_trend_scalper_v9.py  breakout.py  data_driven_mean_reversion.py  hybrid_trend_v7.py  mean_reversion.py  mnq_chop_adx.py  mnq_vortex.py  momentum.py  mtf_keltner.py  orb.py  order_flow_imbalance.py  supertrend_adx_volume.py  target_trend_strategy.py  vwap_mean_reversion.py  vwap_pattern_recognition.py
simple_futures_backtester/utils/: __init__.py  benchmarks.py  jit_utils.py
test_output/: report.json
tests/: __init__.py  conftest.py  test_cli.py
tests/benchmarks/: __init__.py  bench_backtest.py  bench_bars.py  bench_dollar_bars.py  bench_imbalance_bars.py  bench_range_bars.py  bench_sweep.py  bench_tick_bars.py  bench_volume_bars.py
tests/benchmarks/baselines/: targets.json
tests/test_backtest/: __init__.py
tests/test_bars/: __init__.py  test_dollar_bars.py  test_imbalance_bars.py  test_range_bars.py  test_renko.py  test_tick_bars.py  test_volume_bars.py
tests/test_data/: __init__.py  test_validation_comprehensive.py
tests/test_extensions/: __init__.py  test_futures_portfolio.py  test_trailing_stops.py
tests/test_output/: __init__.py  conftest.py  test_charts.py  test_exports.py  test_reports.py
tests/test_strategies/: __init__.py
